// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Bold Component 1`] = `
<div>
  <div
    class="padded base"
  >
    <p
      class="base regular base text"
    >
      <b
        class="base bold"
      >
        Bold Foo
      </b>
    </p>
  </div>
</div>
`;

exports[`renders Italicized Component 1`] = `
<div>
  <div
    class="padded base"
  >
    <p
      class="base regular base text"
    >
      <em
        class="base regular italic"
      >
        Italicized Foo
      </em>
    </p>
  </div>
</div>
`;

exports[`renders Level 1 Heading Component 1`] = `
<div>
  <div
    class="padded base"
  >
    <h1
      class="base black jumbo heading"
    >
      Heading 1
    </h1>
  </div>
</div>
`;

exports[`renders Level 2 Heading Component 1`] = `
<div>
  <div
    class="padded base"
  >
    <h2
      class="base black largest heading"
    >
      Heading 2
    </h2>
  </div>
</div>
`;

exports[`renders Level 3 Heading Component 1`] = `
<div>
  <div
    class="padded base"
  >
    <h3
      class="base extraBold larger heading"
    >
      Heading 3
    </h3>
  </div>
</div>
`;

exports[`renders Level 4 Heading Component 1`] = `
<div>
  <div
    class="padded base"
  >
    <h4
      class="base bold large heading"
    >
      Heading 4
    </h4>
  </div>
</div>
`;

exports[`renders Level 5 Heading Component 1`] = `
<div>
  <div
    class="padded base"
  >
    <h5
      class="base bold base heading"
    >
      Heading 5
    </h5>
  </div>
</div>
`;

exports[`renders Level 6 Heading Component 1`] = `
<div>
  <div
    class="padded base"
  >
    <h6>
      Heading
    </h6>
  </div>
</div>
`;

exports[`renders Text Component 1`] = `
<div>
  <div
    class="padded base"
  >
    <p
      class="base regular base text"
    >
      Paragraph
    </p>
  </div>
</div>
`;

exports[`renders a combination of Markdown components 1`] = `
<div>
  <div
    class="padded base"
  >
    <h1
      class="base black jumbo heading"
    >
      This is a paragraph.
    </h1>
    

    <p
      class="base regular base text"
    >
      The paragraph has some 
      <b
        class="base bold"
      >
        bold text
      </b>
       and some 
      <em
        class="base regular italic"
      >
        italicized text
      </em>
      .
    </p>
    

    <p
      class="base regular base text"
    >
      This is the end of this paragraph.
    </p>
  </div>
</div>
`;

exports[`renders a without headings, paragraph, and wrapping content 1`] = `
<div>
  No heading should show up
  

  This should just be pure string with 
  <b
    class="base bold"
  >
    bold text
  </b>
   and some 
  <em
    class="base regular italic"
  >
    italicized text
  </em>
  
and of course a 
  <a
    href="http://to.somewhere"
  >
    link
  </a>
</div>
`;
